--- a/reconstructed_spectrum.tex
+++ b/reconstructed_spectrum.tex
@@ -6,7 +6,7 @@ to reconstruct $\gamma \to e^+e^-$ events efficiently.
 {\red run reconstruction and demonstrate that ? }
 
 However, the intrinsic resolution of the tracker should contribute less than 0.5 MeV to the
-reconstructed full width of the $e^+e^-$ conversion peak.
+reconstructed width of the $e^+e^-$ conversion peak.
 
 We therefore use the MC truth - the sum of the two MC particle momenta recorded in front
 of the tracker - as a proxy to the reconstructed photon momentum
@@ -49,10 +49,10 @@ Plotted: $P_{tot} = P_1 + P_2$ at VD13, virtual detector in front of the tracker
 two particles, an electron and a positron with P > 30 MeV/c and producing 20 or more straw hits in the tracker each.
 Such particles provide a good proxy to the reconstructable tracks.
 
-The event yield increases with the converter thickness. However of interest for the scale calibration only
-are the events close to the kinematic edge.
-The highest yield of events with P > 128 Mev/c corresponds to the 100 um gold foil, and that determines
-the choice of 100 um thick converter.
+The event yield increases with the converter thickness. However of interest for the scale calibration
+are only events reconstructed close to the kinematic edge. 
+The highest yield of events with P > 128 Mev/c corresponds to the 100 um gold foil,
+and that makes the 100 um think converter a preference.
 
 \begin{figure}[H]
   \begin{tikzpicture}
@@ -72,11 +72,12 @@ the choice of 100 um thick converter.
 \end{figure}
 
 Figure ~\ref{figure:sum_mom_vd09_10_13} shows the $P_{tot}$ distribution for 100 um converter
-with the binning of 100 keV/c. The most probable energy loss is about 800/c keV, 
+with the binning of 100 keV/c. and its fit with the function introduced
+in the SU2020 paper \cite{SU2020_PAPER}. The most probable energy loss is about 800 keV/c, 
 and the resolution function has the FWHM of about 700 keV/c.
-These numbers are not very different from the same numbers for conversion electrons.
+These numbers are not very different from the corresponding numbers for conversion electrons.
 
-Assuming that, similar to the CE case, the width of the distribution is dominated by the energy losses,
+Assuming that similar to the CE case the width of the distribution is dominated by the energy losses,
 the reconstructed $\gamma \to e^+e^-$ peak will have the FWHM $\simeq 1$ MeV/c and the offset
 of about 1 MeV from its nominal position.
 
