- add reconstruction plots

--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -117,7 +117,7 @@
   \begin{center}
     {\Large \bf On a possibility of the Mu2e momentum scale calibration at full field
       \vspace{0.3in}
-      1. Initial analysis
+      1. Proof of principle
     }
 
     \vspace{1cm}
@@ -187,7 +187,7 @@ TODO items:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section {Introduction}
-When negative pions are stopped in hydrogen, they get captured by the hydrogen atoms
+Negative pions stopped in hydrogen get captured by the hydrogen atoms, 
 with the following interactions proceeding via two main channels:
 $\pi^- p \to n\pi^0$ and $\pi^- p \to n \gamma$.
 
