--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -215,6 +215,7 @@ The calibration discussed in this note can be performed in the nominal magnetic 
 \include{geometry_optimization}
 \include{reconstructed_spectrum}
 \include{track_reconstruction_status}
+\include{geometry_v4}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Electric current}
