--- a/geometry_v4.tex
+++ b/geometry_v4.tex
@@ -2,6 +2,9 @@
 \section{Moving converter to OPA}
 
 Make degrader of CH2 , 24mm thick) and move the converter to OPA .
+
+{\red TODO: need a figure with the geometry drawing}
+
 \begin{itemize}
 \item
   Generate 10M events
