--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -177,13 +177,16 @@
   v1.01: inital version
 \end{itemize}
 
+{\red
 TODO items:
 
 \begin{itemize}
 \item
-  placeholder
+  TODO: need a figure with the geometry drawing
+\item
+  TSdA4 : what is its impact on the CE acceptance ?
 \end{itemize}
-
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \section {Introduction}
