--- a/calibration_time.tex
+++ b/calibration_time.tex
@@ -7,7 +7,6 @@ In this section we assume that the experimental background doesn't affect
 the determination accuracy of the momentum edge of RPC photon peak
 and estimate the time needed for the calibration.
 
-\kate{
 \begin{itemize}
 \item 
 From $ 2.5 \times 10^8 $ protons on target, 67.42 negative pions stop on the $\rm{CH_2}$ part of the degrader at T>200ns.
@@ -17,20 +16,17 @@ From $ 2.5 \times 10^8 $ protons on target, 67.42 negative pions stop on the $\r
 The optimal geometry from Section 4 places a gold converter at radius R=25.0cm with thickness 0.1mm. Of $10^7$ RPC photons generated with angle 0<$\cos \theta$<0.2, 10789 produce $e^+ e^-$ pairs that can likely be reconstructed in the tracker (Section 5). Events counted as likely reconstructable have $e^+$ and $e^-$ each with at least 20 straw hits and momentum P > 30MeV/c. Scaling to the full range of photon angles reduces the yield by a factor of 0.2/2, to around $10^{-4}$  per RPC photon. 
 \end{itemize}
 The product of these first three factors is a calibration event rate on the order of $10^{-13} $ per POT.
-}
 
 \begin{itemize}
 \item 
   required accuracy of the momentum scale calibration $@$100 MeV/c: $\sigma_P/P$ < 100 keV/c
 \item
-  {\red how many events do we need ?} \kate{Estimates in the remaining items assume that 1000 $ \gamma \to e^+ e^- $ events would be sufficient to reconstruct the high-energy edge of the 129.4 MeV RPC photon momentum distribution.}
+Estimates in the remaining items assume that reconstructed tracks from 1000 $ \gamma \to e^+ e^- $ events would be sufficient to reconstruct the high-energy edge of the 129.4 MeV RPC photon momentum distribution. Examples are the fitted peaks in Sections 6-7, which both have about 1000 events in the tracker using the default reconstruction.  
 \item
-  \kate{For a yield of $10^{-13}$ events/POT, collecting 1000 events requires $10^{16}$ protons on target.
-  In one-batch mode, an average expected pulse intensity is $1.6 \times 10^7$, with one pulse every 1695ns for about 0.4s of each 1.4s Main Injector cycle. The resulting rate is $2.7 \times 10^{12}$ protons/sec. }
+For a yield of $10^{-13}$ events/POT, collecting 1000 events requires $10^{16}$ protons on target.
+  In one-batch mode, an average expected pulse intensity is $1.6 \times 10^7$, with one pulse every 1695ns for about 0.4s of each 1.4s Main Injector cycle. The resulting rate is $2.7 \times 10^{12}$ protons/sec, which would provide 1000 calibration events in less than an hour.
 \item
-  Assuming running at 10\% of nominal beam intensity and the data collection efficiency of 50\%,
-  collecting 1000 reconstructable \kate{ $ \gamma \to e^+ e^- $ events would require on the order of
-  $10^{16}/( 0.1 \cdot 0.5 \cdot  2.7 \times 10^{12}) \sim 10^5$ seconds,} or about one day of running.
+  Assuming that calibration data is taken at 10\% of nominal beam intensity with a data collection efficiency of 50\%, the time needed increases by a factor of 20. A further reconstruction efficiency factor of 50\% takes into account events not reconstructed in the tracker, an estimate for the case after improving reconstruction efficiency. Overall, collecting 1000 reconstructable $ \gamma \to e^+ e^- $ events would require on the order of $10^5$ seconds, or about one day of running.
 \item
   running at 10\% of the nominal beam intensity in one-batch mode and with the digitization starting
   at 200 ns corresponds to the total number of background hits per microbunch of about 200,
