--- a/mu2e-50071.tex
+++ b/mu2e-50071.tex
@@ -219,7 +219,7 @@ The calibration discussed in this note can be performed in the nominal magnetic 
 \include{reconstructed_spectrum}
 \include{track_reconstruction_status}
 \include{geometry_v4}
-\include{ce_acceptance}
+% \include{ce_acceptance} % included into geometry_v4
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Electric current}
